OR-1593 Fix z-index of the dropdown menu in contact list

--- a/modules/linagora.esn.contact/frontend/css/styles.less
+++ b/modules/linagora.esn.contact/frontend/css/styles.less
@@ -255,3 +255,7 @@ contact-edition-form {
   animation: fadeIn 0.2s;
   -webkit-animation: fadeIn 0.2s;
 }
+
+.actions {
+  z-index: auto;
+}
